web/css/timeline.css
/* ... */
#timeline-header .animate-button {
  margin-top: 10px;
  height: 40px;
  width: 40px;
}
#timeline-header .animate-button .wv-animate {
  color: #fff;
  font-size: 2.5em;
  margin: 5px 0 0 2px;
}

#timeline-header .animate-button:hover .wv-animate {
  color: #1a1a1a;
}

#timeline-header .animate-button.wv-disabled-button {
  cursor: auto;
  pointer-events: auto;
}
#timeline-header .animate-button.wv-disabled-button:hover {
  background-color: transparent;
}
#timeline-header .animate-button.wv-disabled-button:hover .wv-animate {
  opacity: 0.5;
  color: #fff;
}
#timeline-header .animate-button.wv-disabled-button .wv-animate {
  opacity: 0.5;
  pointer-events: none;
}

#timeline-header,
#timeline-footer {
  float: left;
}

#timeline-footer {
  border-left: 1px solid #666;
  border-right: 1px solid #666;
}

#wv-timeline-range-selector {
  position: absolute;
  bottom: 0;
  overflow: hidden;
  pointer-events: none;
}

#wv-timeline-range-selector * {
  pointer-events: all;
}

#wv-rangeselector-case > .wv-timeline-range-selector {
  overflow: visible;
}

#timeline-footer svg > g {
  visibility: visible;
}

/* Axis */
.timeline-axis-container {
  height: 65px;
  border-top: 1.5px solid #fff;
}

.timeline-axis-svg {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.axis-grid-text {
  font-size: 18px;
  font-weight: 500;
  font-family: 'Roboto Mono', monospace;
  color: #fff;
  pointer-events: none;
  user-select: none;
}

.axis-grid-line {
  pointer-events: none;
}

/* Zoom button container */
#zoom-btn-container-axis {
  margin-bottom: 5px;
}

.zoom-level-display-text {
  color: #fff;
  font-family: 'Roboto Mono', monospace;
  text-align: center;
  font-size: 12px;
  line-height: 1.2em;
  vertical-align: baseline;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  text-transform: uppercase;
  margin: 4px 0;
  display: block;
}

.zoom-level-change {
  width: 75px;
}

.zoom-level-change-arrows {
  user-select: none;
  background: transparent;
  border: thin solid transparent;
  vertical-align: middle;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  width: 55px;
}

/* Interval selector */
.custom-interval-widget {
  height: 54px;
  width: 225px;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  background: rgba(40, 40, 40, 0.85);
  position: absolute;
  top: -54px;
  left: 0;
  display: none;
  color: #fff;
  border-bottom: thin solid #444;
}

.custom-interval-widget i.wv-close {
  position: absolute;
  top: 5px;
  right: 5px;
}

.custom-interval-widget i.wv-close:hover {
  color: #999;
  cursor: pointer;
}

.custom-interval-widget-header,
.custom-interval-widget-controls-container {
  display: inline-block;
  margin: 7px 0 0 10px;
}

.custom-interval-widget-controls-container {
  display: flex;
  flex-direction: row;
}

.custom-interval-delta-input {
  width: 80px;
  height: 24px;
  color: #7890cd;
  opacity: 1;
  font-size: 16px;
  background: transparent;
  font-family: 'Roboto Mono', monospace;
  line-height: 1.2em;
  vertical-align: baseline;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  padding: 0;
  text-align: center;
  border: thin solid #fff;
}

.custom-interval-timescale-select-form-container {
  width: 100px;
  height: 40px;
  color: #7890cd;
  opacity: 1;
  font-size: 16px;
  background: transparent;
  border: 0;
  font-family: 'Roboto Mono', monospace;
  line-height: 1.2em;
  vertical-align: baseline;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  text-align: center;
}

.custom-interval-timescale-select {
  padding: 0;
  background: transparent;
  color: #7890cd;
  height: 24px;
  font-size: 16px;
  width: 118px;
  border: thin solid #fff;
  text-align-last: center;
  padding-left: 15px;
}

.custom-interval-timescale-select-option {
  background: rgb(40, 40, 40);
}

.custom-interval-text {
  color: #7890cd !important;
}

#timeline-header .timeline-zoom,
#zoom-btn-container-axis .wv-zoom-tooltip {
  display: block;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding: 4px;
  background-color: rgba(40, 40, 40, 0.9);
  border-radius: 3px;
}

#timeline-header #zoom-btn-container,
#zoom-btn-container-axis {
  display: block;
}

#zoom-btn-container .wv-tooltip {
  position: absolute;
  bottom: 100%;
  border-bottom: 8px solid transparent;
  width: 100px;
  z-index: 10;
}

#zoom-btn-container-axis .wv-zoom-tooltip {
  position: absolute;
  bottom: 100%;
  width: 75px;
  z-index: 10;
}

#zoom-btn-container .wv-tooltip::after {
  position: absolute;
  top: 100%;
  left: 15%;
  content: '';
  border-top: 5px solid #000;
  border-top: 5px solid rgba(51, 51, 51, 0.9);
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
}

.zoom-btn-active {
  width: 100%;
  color: #ccc;
  font-size: 12px;
  line-height: 14px;
  display: block;
  clear: both;
  cursor: pointer;
  text-transform: uppercase;
  text-align: center;
  font-family: 'Roboto Mono', monospace;
  margin-top: -2px;
}

.zoom-btn-active:hover {
  background-color: #fff;
  color: #1a1a1a;
}

.timeline-zoom .zoom-btn {
  display: block;
  clear: both;
  cursor: pointer;
  text-transform: uppercase;
  text-align: center;
  font-family: 'Roboto Mono', monospace;
  font-size: 14px;
  line-height: 16px;
  color: #ccc;
  padding: 2px 0;
}

.timeline-zoom .zoom-btn:hover {
  background-color: #fff;
  color: #1a1a1a;
}

#timeline-hide {
  position: absolute;
  top: 0;
  right: 0;
  height: 64px;
  width: 20px;
  cursor: pointer;
  border-left: 1px solid #1a1a1a;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
}

#timeline-hide:hover {
  background-color: #fff;
}

#timeline-hide:hover .wv-timeline-hide-double-chevron-left,
#timeline-hide:hover .wv-timeline-hide-double-chevron-right,
.wv-timeline-hide-double-chevron-left:hover,
.wv-timeline-hide-double-chevron-right:hover {
  background-position: -206px -63px;
}
/* ... */

